# tortuga_description

./: CMakeLists.txt  README.md  package.xml
launch/: description.launch  robot.launch  rviz.launch  simulation.launch
launch/application/: pose_filter.launch
launch/peripheral/: controller.launch
meshes/: antenna_module.stl  axle_bridge.stl  battery.stl  battery_holder.stl  body.stl  caster_axle_side_a.stl  caster_axle_side_b.stl  dummy_module.stl  front_lamps.stl  gear_motor.stl  genius_module.stl  picam_noir_module.stl  pivoting_axle.stl  rear_lamps.stl
params/: dc_motor.yaml  joint_motor.yaml  kinematics.yaml  pose_filter.yaml
rviz/: tortuga.rviz
xacro/: caster_block.xacro  drive_block.xacro  materials.xacro  model.xacro  modules.xacro  parametric_base.xacro  properties.xacro
