<?xml version="1.0"?>
<package format="2">
  <name>tortuga</name>
  <version>1.5.0</version>
  <description>Now Technologies Tortuga Robot Description</description>
  <maintainer email="marton@nowtech.hu">nilseuropa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>

</package>
